# mri_tracking_example

./: .gitignore  README  README.md
data/phantom_1/: C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0001.2022.03.14.20.00.06.154119.220047956.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0002.2022.03.14.20.00.06.154119.220047973.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0003.2022.03.14.20.00.06.154119.220047990.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0004.2022.03.14.20.00.06.154119.220048007.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0005.2022.03.14.20.00.06.154119.220048024.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0006.2022.03.14.20.00.06.154119.220048041.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0007.2022.03.14.20.00.06.154119.220048058.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0008.2022.03.14.20.00.06.154119.220048075.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0009.2022.03.14.20.00.06.154119.220048092.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0010.2022.03.14.20.00.06.154119.220048109.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0011.2022.03.14.20.00.06.154119.220048126.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0012.2022.03.14.20.00.06.154119.220048143.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0013.2022.03.14.20.00.06.154119.220048160.IMA  C31P_MRS_MOCO-PHANTOM_220314.MR.SWAMP_PHANTOM_MOCO.0157.0014.2022.03.14.20.00.06.154119.220048177.IMA  (+242 more)
matlab/: .gitignore  bbox2bbox.m  dicom2video.m  getNumberFromMrProtocol.m  loadNavSeries.m  mexgen_calcshiftvector.m  mexgen_tracking.m  mri_example_datasets.m  mri_example_tracking.m  readTrackingLog.m
src/: .gitignore  CMakeLists.txt  CalcShift_cppwrapper.cpp  CalcShift_cppwrapper.h  Matrix.h  SVD.h  calculate_shift_vector.cpp  calculate_shift_vector.h  run_tracking.sh  test_tracking4matlab.cpp  tracking.cpp  tracking4matlab.cpp  tracking4matlab.h
src/test/: run_tracking.sh
(+1226 files in other folders)
